--- a/app/src/main/res/layout/user_test_activity.xml
+++ b/app/src/main/res/layout/user_test_activity.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.Tests">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.UserTests">
 
     <TextView
         android:id="@+id/textView3"
