--- a/app/src/main/res/layout/fragment_backman.xml
+++ b/app/src/main/res/layout/fragment_backman.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:weightSum="10"
     android:orientation="vertical"
-    tools:context=".muscles.fragments.status.BackManActivity"
+    tools:context=".muscles.fragments.status.BackManFragment"
+    android:background="@color/colorDefault"
     >
 
     <LinearLayout
