--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -5,46 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10"
+    android:weightSum="15"
+    android:background="@color/colorDefault"
     tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.ConditionActivity"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical"
-        >
         <TextView
             android:id="@+id/conditionHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
+            android:layout_weight="1"
             android:textAlignment="center"
             android:text="Stav tvého těla" />
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal"
+            android:layout_weight="2"
             >
-        <Button
+                <ImageButton
             android:id="@+id/front"
             android:layout_height="wrap_content"
-            android:layout_width="200dp"
-            android:text="Přední část" />
-        <Button
+            android:layout_width="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/background_leftrotationbutton"
+            />
+                 <ImageButton
             android:id="@+id/back"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_width="200dp"
-            android:text="Zadní část" />
+            android:layout_width="100dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/background_rightrotationbutton" />
         </LinearLayout>
-    </LinearLayout>
     <LinearLayout
         android:id="@+id/muscle_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="12"
         android:orientation="vertical">
-    </LinearLayout>
+        </LinearLayout>
 </LinearLayout>
