--- a/app/src/main/res/layout/fragment_basicdamage.xml
+++ b/app/src/main/res/layout/fragment_basicdamage.xml
@@ -1,14 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LOL">
+    tools:context=".muscles.fragments.damage.BasicDamageFragment">
 
-    <com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
-        android:id="@+id/plus_one_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        plus:annotation="inline"
-        plus:size="standard" />
-
-</FrameLayout>
+</fragment>
