--- a/app/src/main/res/layout/fragment_firstaid.xml
+++ b/app/src/main/res/layout/fragment_firstaid.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="10"
-    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.ExerciseActivity"
+    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.FirstAidFragment"
     android:orientation="vertical">
 
     <TextView
