--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.HomeScreen"
+    tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.HomeScreenFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical">
 <LinearLayout
@@ -56,7 +56,29 @@
                 android:ems="10"
                 android:hint="Příjmení"
                 android:inputType="textPersonName" />
-
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Věk"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="5"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/editVek"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="5"
+                android:hint="Věk"
+                android:inputType="number" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="roků"/>
         </LinearLayout>
 
         <TextView
