--- a/app/src/main/res/layout/fragment_basicdamage.xml
+++ b/app/src/main/res/layout/fragment_basicdamage.xml
@@ -2,6 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".muscles.fragments.damage.BasicDamageFragment">
+    tools:context=".muscles.Model.Damage.BasicDamageFragment">
 
 </fragment>
