--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="15"
+    android:weightSum="20"
     android:background="@color/colorDefault"
     tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.ConditionFragment"
     >
@@ -18,32 +18,44 @@
             android:layout_weight="1"
             android:textAlignment="center"
             android:text="Stav tvého těla" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_weight="2"
-            >
-                <ImageButton
-            android:id="@+id/front"
-            android:layout_height="wrap_content"
-            android:layout_width="100dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@drawable/background_leftrotationbutton"
-            />
-                 <ImageButton
-            android:id="@+id/back"
-            android:layout_height="wrap_content"
-            android:layout_width="100dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@drawable/background_rightrotationbutton" />
-        </LinearLayout>
+
     <LinearLayout
-        android:id="@+id/muscle_fragment_container"
-        android:layout_width="match_parent"
+        android:layout_weight="2"
         android:layout_height="0dp"
-        android:layout_weight="12"
-        android:orientation="vertical">
-        </LinearLayout>
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/frontManButton"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:background="@drawable/background_leftrotationbutton"/>
+
+        <ImageButton
+            android:id="@+id/backManButton"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:background="@drawable/background_rightrotationbutton"/>
+    </LinearLayout>
+
+        <TextView
+            android:id="@+id/bodyPartText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:text="Přední část"
+            android:textSize="25sp"/>
+        <ImageView
+            android:id="@+id/bodyImage"
+            android:layout_weight="9"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/human_body" />
+        <ListView
+            android:layout_weight="7"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:id="@+id/statusBodyContainer"
+            android:orientation="vertical"/>
 </LinearLayout>
