--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -17,7 +17,7 @@
             android:textSize="25sp"
             android:layout_weight="1"
             android:textAlignment="center"
-            android:text="Stav tvého těla" />
+            android:text="@string/body_condition_string" />
 
     <LinearLayout
         android:layout_weight="2"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_weight="1"
-            android:text="Přední část"
+            android:text="@string/front_part_string"
             android:textSize="25sp"/>
         <ImageView
             android:id="@+id/bodyImage"
