--- a/app/src/main/res/layout/fragment_usertests.xml
+++ b/app/src/main/res/layout/fragment_usertests.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textSize="50sp"
         android:textAlignment="center"
-        android:text="Testy" />
+        android:text="@string/tests_string" />
     <LinearLayout
         android:id="@+id/home_fragment_container"
         android:layout_width="match_parent"
@@ -26,13 +26,13 @@
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:text="Novinky" />
+            android:text="@string/news_string" />
         <TextView
             android:id="@+id/warningText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:text="Upozornění" />
+            android:text="@string/woman_string" />
     </LinearLayout>
 </LinearLayout>
