Created design for ArticleActivity

--- a/app/src/main/res/layout/fragment_usertests.xml
+++ b/app/src/main/res/layout/fragment_usertests.xml
@@ -33,6 +33,6 @@
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:textAlignment="center"
-            android:text="@string/woman_string" />
+            android:text="@string/warning_string" />
     </LinearLayout>
 </LinearLayout>
