--- a/app/src/main/res/layout/fragment_homescreen.xml
+++ b/app/src/main/res/layout/fragment_homescreen.xml
@@ -15,6 +15,15 @@
         android:textSize="50sp"
         android:textAlignment="center"
         android:text="@string/main_page_string" />
+
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="35sp"
+        android:text="@string/welcome_string"
+        android:textAlignment="center" />
+
     <LinearLayout
         android:id="@+id/home_fragment_container"
         android:layout_width="match_parent"
