--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,26 +7,35 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorDefault"
     android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/profilHeader"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="50sp"
-        android:textAlignment="center"
-        android:text="@string/profile_string" />
-    <TextView
-        android:id="@+id/yourName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="20sp"
-        android:textAlignment="center" />
-</LinearLayout>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/profilHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="50sp"
+                android:textAlignment="center"
+                android:text="@string/profile_string" />
+
+            <Button
+                android:id="@+id/saveProfButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ulozit"
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal"/>
+
+        </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,7 +107,7 @@
                 android:layout_weight="1"
                 android:ems="5"
                 android:text="0"
-                android:inputType="number" />
+                android:inputType="number"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -110,12 +119,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/height_string"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="5"
             android:orientation="horizontal">
-            <EditText
+
+                <EditText
                 android:id="@+id/editVyska"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -123,55 +134,63 @@
                 android:text="0"
                 android:ems="5"
                 android:inputType="number" />
-            <TextView
+
+                <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="@string/centimeters_string"/>
-        </LinearLayout>
+            </LinearLayout>
 
-        <TextView
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sex_string"/>
-        <RadioGroup
+
+            <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
-            <RadioButton
+                <RadioButton
                 android:id="@+id/whameButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/man_string" />
 
-            <RadioButton
-                android:id="@+id/niceGuyButton"
+                 <RadioButton
+                android:id="@+id/manButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/woman_string" />
-        </RadioGroup>
+            </RadioGroup>
 
-        <LinearLayout
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="5"
             android:orientation="horizontal">
-            <TextView
+
+                <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="@string/mistakes_string"/>
-            <TextView
+
+                <TextView
                 android:id="@+id/wrong_things_text"
                 android:text="0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+
+             </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
+
+</ScrollView>
