--- a/app/src/main/res/layout/fragment_firstaid.xml
+++ b/app/src/main/res/layout/fragment_firstaid.xml
@@ -17,8 +17,13 @@
         android:textSize="50sp"
         android:textAlignment="center"
         android:text="@string/first_aid_string" />
-    <ExpandableListView
-        android:layout_width="match_parent"
+    <ScrollView
         android:layout_height="0dp"
-        android:layout_weight="9" />
+        android:layout_weight="9"
+        android:layout_width="match_parent">
+        <ListView
+            android:id="@+id/firstAidList"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
+    </ScrollView>
 </LinearLayout>
