--- a/app/src/main/res/layout/fragment_usertests.xml
+++ b/app/src/main/res/layout/fragment_usertests.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorDefault"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context="stredoskolskaodbornacinost.soc.bodyconditiontest.muscles.fragments.UserTestsFragment">
 
     <TextView
@@ -13,26 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="50sp"
+        android:layout_weight="1"
         android:textAlignment="center"
         android:text="@string/tests_string" />
-    <LinearLayout
-        android:id="@+id/home_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/newsText"
-            android:layout_width="match_parent"
+
+    <ScrollView
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:layout_width="match_parent">
+        <ExpandableListView
+            android:id="@+id/testList"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="@string/news_string" />
-        <TextView
-            android:id="@+id/warningText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="@string/warning_string" />
-    </LinearLayout>
+            android:layout_width="match_parent"/>
+    </ScrollView>
+
 </LinearLayout>
