--- a/app/src/main/res/layout/dialog_article.xml
+++ b/app/src/main/res/layout/dialog_article.xml
@@ -22,6 +22,14 @@
         android:padding="10dp"
         android:text="Title"
         android:layout_marginBottom="10dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Obtiznost: HardCore"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zavaznost: Vazna"/>
     <ScrollView
         android:layout_height="0dp"
         android:layout_weight="15"
