--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -46,12 +46,20 @@
             android:layout_weight="1"
             android:text="@string/front_part_string"
             android:textSize="25sp"/>
+
+    <TextView android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:text="Kondice je na 100%"/>
+
         <ImageView
             android:id="@+id/bodyImage"
-            android:layout_weight="9"
-            android:layout_width="match_parent"
+            android:layout_weight="8"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:src="@drawable/human_body" />
+            android:src="@drawable/human_body"
+            android:contentDescription="Tvoje telo" />
         <ListView
             android:layout_weight="7"
             android:layout_height="0dp"
